Update Traditional Chinese

--- a/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
+++ b/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
@@ -160,19 +160,19 @@
   "midnightcontrols.menu.max_left_x_value": "左搖桿 X 軸最大值識別範圍",
   "midnightcontrols.menu.max_left_x_value.tooltip": "更改左搖桿 X 軸最大值的識別範圍。若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，左右移動較為緩慢等問題，本項可能會有所幫助。",
   "midnightcontrols.menu.max_left_y_value": "左搖桿 Y 軸最大值識別範圍",
-  "midnightcontrols.menu.max_left_y_value.tooltip": "更改左搖桿 Y 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，前後移動較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.menu.max_left_y_value.tooltip": "更改左搖桿 Y 軸最大值的識別範圍。若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，前後移動較為緩慢等問題，本項可能會有所幫助。",
   "midnightcontrols.menu.max_right_x_value": "右搖桿 X 軸最大值識別範圍",
-  "midnightcontrols.menu.max_right_x_value.tooltip": "更改右搖桿 X 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭左右旋轉較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.menu.max_right_x_value.tooltip": "更改右搖桿 X 軸最大值的識別範圍。若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭左右旋轉較為緩慢等問題，本項可能會有所幫助。",
   "midnightcontrols.menu.max_right_y_value": "右搖桿 Y 軸最大值識別範圍",
-  "midnightcontrols.menu.max_right_y_value.tooltip": "更改右搖桿 Y 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭上下旋轉較為緩慢等問題，本項可能會有所幫助。",
-  "midnightcontrols.menu.mouse_speed": "滑鼠游標移動速度",
-  "midnightcontrols.menu.mouse_speed.tooltip": "搖桿模擬的滑鼠游標的移動速度。",
+  "midnightcontrols.menu.max_right_y_value.tooltip": "更改右搖桿 Y 軸最大值的識別範圍。若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭上下旋轉較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.menu.mouse_speed": "游標移動速度",
+  "midnightcontrols.menu.mouse_speed.tooltip": "搖桿模擬的游標的移動速度。",
   "midnightcontrols.menu.move_chat": "將聊天輸入框移至頂部",
   "midnightcontrols.menu.move_chat.tooltip": "將聊天輸入欄位移至頂部，以便在使用虛擬鍵盤的裝置上更好地輸入。",
   "midnightcontrols.menu.reacharound.horizontal": "水平方向方塊放置輔助",
-  "midnightcontrols.menu.reacharound.horizontal.tooltip": "啟用水平方向方塊放置輔助，可在腳下方塊的前方放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
+  "midnightcontrols.menu.reacharound.horizontal.tooltip": "啟用水平方向方塊放置輔助，可在腳下方塊的前方放置方塊。§c在部分伺服器可能會被認定為作弊§r。",
   "midnightcontrols.menu.reacharound.vertical": "垂直方向方塊放置輔助",
-  "midnightcontrols.menu.reacharound.vertical.tooltip": "啟用垂直方向方塊放置輔助，可在腳下方塊的下方放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
+  "midnightcontrols.menu.reacharound.vertical.tooltip": "啟用垂直方向方塊放置輔助，可在腳下方塊的下方放置方塊。§c在部分伺服器可能會被認定為作弊§r。",
   "midnightcontrols.menu.reload_controller_mappings": "重新載入搖桿按鍵映射",
   "midnightcontrols.menu.reload_controller_mappings.tooltip": "重新載入搖桿的按鍵映射檔案。",
   "midnightcontrols.menu.right_dead_zone": "右搖桿死區",
@@ -194,11 +194,11 @@
   "midnightcontrols.menu.title.visual": "界面選項",
   "midnightcontrols.menu.unfocused_input": "非活動狀態輸入",
   "midnightcontrols.menu.unfocused_input.tooltip": "即使遊戲窗口處於非活動狀態，也允許搖桿進行按鍵輸入。",
-  "midnightcontrols.menu.virtual_mouse": "虛擬滑鼠游標",
-  "midnightcontrols.menu.virtual_mouse.tooltip": "啟用虛擬滑鼠游標，在分屏的情況下很有用。",
-  "midnightcontrols.menu.virtual_mouse.skin": "虛擬滑鼠游標樣式",
-  "midnightcontrols.menu.hide_cursor": "隱藏正常滑鼠游標",
-  "midnightcontrols.menu.hide_cursor.tooltip": "隱藏正常滑鼠游標", 
+  "midnightcontrols.menu.virtual_mouse": "虛擬游標",
+  "midnightcontrols.menu.virtual_mouse.tooltip": "啟用虛擬游標，在分屏的情況下很有用。",
+  "midnightcontrols.menu.virtual_mouse.skin": "虛擬游標樣式",
+  "midnightcontrols.menu.hide_cursor": "隱藏正常游標",
+  "midnightcontrols.menu.hide_cursor.tooltip": "隱藏正常游標", 
   "midnightcontrols.narrator.unbound": "取消綁定 %s",
   "midnightcontrols.not_bound": "未綁定",
   "midnightcontrols.virtual_mouse.skin.default_light": "預設樣式（白色）",
