--- a/src/main/resources/assets/midnightcontrols/lang/vi_vn.json
+++ b/src/main/resources/assets/midnightcontrols/lang/vi_vn.json
@@ -1,36 +1,36 @@
 {
-  "midnightcontrols.midnightconfig.title": "MidnightControls Advanced Config",
-  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.DEFAULT_LIGHT": "Default Light",
-  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.DEFAULT_DARK": "Default Dark",
-  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.SECOND_LIGHT": "Second Light",
-  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.SECOND_DARK": "Second Dark",
-  "midnightcontrols.midnightconfig.enum.ControllerType.DEFAULT": "Default",
+  "midnightcontrols.midnightconfig.title": "Cấu hình MidnightControls nâng cao",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.DEFAULT_LIGHT": "Sáng mặc định",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.DEFAULT_DARK": "Tối mặc định",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.SECOND_LIGHT": "Sáng thứ hai",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.SECOND_DARK": "Tối thứ hai",
+  "midnightcontrols.midnightconfig.enum.ControllerType.DEFAULT": "Mặc định",
   "midnightcontrols.midnightconfig.enum.ControllerType.DUALSHOCK": "DualShock",
   "midnightcontrols.midnightconfig.enum.ControllerType.DUALSENSE": "DualSense",
-  "midnightcontrols.midnightconfig.enum.ControllerType.SWITCH": "Switch/Wii Controller",
-  "midnightcontrols.midnightconfig.enum.ControllerType.XBOX": "Xbox One/Series Controller",
-  "midnightcontrols.midnightconfig.enum.ControllerType.XBOX_360": "Xbox 360 Controller",
-  "midnightcontrols.midnightconfig.enum.ControllerType.STEAM_CONTROLLER": "Steam Controller",
+  "midnightcontrols.midnightconfig.enum.ControllerType.SWITCH": "Bộ điều khiển Switch/Wii",
+  "midnightcontrols.midnightconfig.enum.ControllerType.XBOX": "Bộ điều khiển Xbox One/Series",
+  "midnightcontrols.midnightconfig.enum.ControllerType.XBOX_360": "Bộ điều khiển Xbox 360",
+  "midnightcontrols.midnightconfig.enum.ControllerType.STEAM_CONTROLLER": "Bộ điều khiển Steam",
   "midnightcontrols.midnightconfig.enum.ControllerType.STEAM_DECK": "Steam Deck",
-  "midnightcontrols.midnightconfig.enum.ControllerType.OUYA": "OUYA Controller",
-  "midnightcontrols.midnightconfig.enum.ControllerType.NUMBERED": "Numbered Controller",
-  "midnightcontrols.midnightconfig.enum.ControlsMode.DEFAULT": "Keyboard/Mouse",
-  "midnightcontrols.midnightconfig.enum.ControlsMode.CONTROLLER": "Controller",
-  "midnightcontrols.midnightconfig.enum.ControlsMode.TOUCHSCREEN": "Touchscreen (WIP)",
-  "midnightcontrols.midnightconfig.enum.HudSide.LEFT": "Left",
-  "midnightcontrols.midnightconfig.enum.HudSide.RIGHT": "Right",
-  "key.midnightcontrols.look_down": "Look down",
-  "key.midnightcontrols.look_left": "Look left",
-  "key.midnightcontrols.look_right": "Look right",
-  "key.midnightcontrols.look_up": "Look up",
-  "key.midnightcontrols.ring": "Open Unbound Keybind Ring",
-  "midnightcontrols.action.attack": "Attack",
-  "midnightcontrols.action.back": "Back",
-  "midnightcontrols.action.chat": "Open Chat",
-  "midnightcontrols.action.controls_ring": "Open Unbound Keybind Ring",
-  "midnightcontrols.action.debug_screen": "Open Debug HUD (F3)",
-  "midnightcontrols.action.drop_item": "Drop Item",
-  "midnightcontrols.action.exit": "Exit Screen",
+  "midnightcontrols.midnightconfig.enum.ControllerType.OUYA": "Bộ điều khiển OUYA",
+  "midnightcontrols.midnightconfig.enum.ControllerType.NUMBERED": "Bộ điều khiển được đánh số",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.DEFAULT": "Bàn phím/Chuột",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.CONTROLLER": "Bộ điều khiển",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.TOUCHSCREEN": "Màn hình cảm ứng (WIP)",
+  "midnightcontrols.midnightconfig.enum.HudSide.LEFT": "Trái",
+  "midnightcontrols.midnightconfig.enum.HudSide.RIGHT": "Phải",
+  "key.midnightcontrols.look_down": "Nhìn xuống",
+  "key.midnightcontrols.look_left": "Nhìn trái",
+  "key.midnightcontrols.look_right": "Nhìn phải",
+  "key.midnightcontrols.look_up": "Nhìn lên",
+  "key.midnightcontrols.ring": "Mở vòng liên kết phím không liên kết",
+  "midnightcontrols.action.attack": "Tấn công",
+  "midnightcontrols.action.back": "Trở lại",
+  "midnightcontrols.action.chat": "Mở trò chuyện",
+  "midnightcontrols.action.controls_ring": "Mở vòng liên kết phím không liên kết",
+  "midnightcontrols.action.debug_screen": "Mở HUD gỡ lỗi (F3)",
+  "midnightcontrols.action.drop_item": "Thả vật phẩm",
+  "midnightcontrols.action.exit": "Màn hình thoát",
   "midnightcontrols.action.forward": "Forward",
   "midnightcontrols.action.hit": "Hit",
   "midnightcontrols.action.hotbar_left": "Hotbar left",
