--- a/src/main/resources/assets/midnightcontrols/lang/vi_vn.json
+++ b/src/main/resources/assets/midnightcontrols/lang/vi_vn.json
@@ -181,26 +181,26 @@
   "midnightcontrols.menu.rotation_speed.tooltip": "Tốc độ quay Trục X của máy ảnh ở chế độ bộ điều khiển.",
   "midnightcontrols.menu.y_axis_rotation_speed": "Tốc độ quay trục Y",
   "midnightcontrols.menu.y_axis_rotation_speed.tooltip": "Tốc độ quay Trục Y của máy ảnh ở chế độ bộ điều khiển.",
-  "midnightcontrols.menu.separate_controller_profile": "Separate Controller Profile",
-  "midnightcontrols.menu.separator.controller": "Controller",
-  "midnightcontrols.menu.separator.general": "General",
-  "midnightcontrols.menu.title": "MidnightControls - Settings",
-  "midnightcontrols.menu.title.controller": "Controller Options",
-  "midnightcontrols.menu.title.controller_controls": "Controller Bindings",
-  "midnightcontrols.menu.title.gameplay": "Gameplay Options",
-  "midnightcontrols.menu.title.general": "General Options",
-  "midnightcontrols.menu.title.hud": "HUD Options",
-  "midnightcontrols.menu.title.mappings.string": "Mappings File Editor",
-  "midnightcontrols.menu.title.visual": "Appearance Options",
-  "midnightcontrols.menu.unfocused_input": "Unfocused Input",
-  "midnightcontrols.menu.unfocused_input.tooltip": "Allows controller input when the window is not focused.",
-  "midnightcontrols.menu.virtual_mouse": "Virtual Mouse",
-  "midnightcontrols.menu.virtual_mouse.tooltip": "Enables the virtual mouse, which is useful during splitscreen.",
-  "midnightcontrols.menu.virtual_mouse.skin": "Virtual Mouse Skin",
-  "midnightcontrols.menu.hide_cursor": "Hide Normal Mouse Cursor",
-  "midnightcontrols.menu.hide_cursor.tooltip": "Hides the normal mouse cursor, leaving only the virtual mouse visible.",
-  "midnightcontrols.narrator.unbound": "Unbound %s",
-  "midnightcontrols.not_bound": "Not bound",
+  "midnightcontrols.menu.separate_controller_profile": "Hồ sơ bộ điều khiển riêng biệt",
+  "midnightcontrols.menu.separator.controller": "Bộ điều khiển",
+  "midnightcontrols.menu.separator.general": "Chung",
+  "midnightcontrols.menu.title": "MidnightControls - Cài đặt",
+  "midnightcontrols.menu.title.controller": "Tùy chọn bộ điều khiển",
+  "midnightcontrols.menu.title.controller_controls": "Ràng buộc bộ điều khiển",
+  "midnightcontrols.menu.title.gameplay": "Tuỳ chọn Gameplay",
+  "midnightcontrols.menu.title.general": "Tuỳ chọn chung",
+  "midnightcontrols.menu.title.hud": "Tuỳ chọn HUD",
+  "midnightcontrols.menu.title.mappings.string": "Trình chỉnh sửa tệp mapping",
+  "midnightcontrols.menu.title.visual": "Tùy chọn giao diện",
+  "midnightcontrols.menu.unfocused_input": "Đầu vào không tập trung",
+  "midnightcontrols.menu.unfocused_input.tooltip": "Cho phép đầu vào bộ điều khiển khi cửa sổ không được đặt tiêu điểm.",
+  "midnightcontrols.menu.virtual_mouse": "Chuột ảo",
+  "midnightcontrols.menu.virtual_mouse.tooltip": "Bật chuột ảo, rất hữu ích trong quá trình chia đôi màn hình.",
+  "midnightcontrols.menu.virtual_mouse.skin": "Skin chuột ảo",
+  "midnightcontrols.menu.hide_cursor": "Ẩn con trỏ chuột bình thường",
+  "midnightcontrols.menu.hide_cursor.tooltip": "Ẩn con trỏ chuột bình thường, chỉ để lại con chuột ảo.",
+  "midnightcontrols.narrator.unbound": "Bỏ ràng buộc %s",
+  "midnightcontrols.not_bound": "Không ràng buộc",
   "midnightcontrols.virtual_mouse.skin.default_light": "Default Light",
   "midnightcontrols.virtual_mouse.skin.default_dark": "Default Dark",
   "midnightcontrols.virtual_mouse.skin.second_light": "Second Light",
