--- a/src/main/resources/assets/midnightcontrols/lang/vi_vn.json
+++ b/src/main/resources/assets/midnightcontrols/lang/vi_vn.json
@@ -201,10 +201,10 @@
   "midnightcontrols.menu.hide_cursor.tooltip": "Ẩn con trỏ chuột bình thường, chỉ để lại con chuột ảo.",
   "midnightcontrols.narrator.unbound": "Bỏ ràng buộc %s",
   "midnightcontrols.not_bound": "Không ràng buộc",
-  "midnightcontrols.virtual_mouse.skin.default_light": "Default Light",
-  "midnightcontrols.virtual_mouse.skin.default_dark": "Default Dark",
-  "midnightcontrols.virtual_mouse.skin.second_light": "Second Light",
-  "midnightcontrols.virtual_mouse.skin.second_dark": "Second Dark",
+  "midnightcontrols.virtual_mouse.skin.default_light": "Sáng mặc định",
+  "midnightcontrols.virtual_mouse.skin.default_dark": "Tối mặc định",
+  "midnightcontrols.virtual_mouse.skin.second_light": "Sáng thứ hai",
+  "midnightcontrols.virtual_mouse.skin.second_dark": "Tối thứ hai",
   "midnightcontrols.midnightconfig.category.controller": "Controller",
   "midnightcontrols.midnightconfig.category.misc": "Miscellaneous",
   "midnightcontrols.midnightconfig.category.screens": "Screens",
