--- a/src/main/resources/assets/midnightcontrols/lang/vi_vn.json
+++ b/src/main/resources/assets/midnightcontrols/lang/vi_vn.json
@@ -63,10 +63,10 @@
   "midnightcontrols.action.take": "Lấy vật phẩm",
   "midnightcontrols.action.take_all": "Lấy Stack",
   "midnightcontrols.action.use": "Sử dụng",
-  "midnightcontrols.action.zoom": "Zoom",
-  "midnightcontrols.action.zoom_in": "Tăng Zoom",
-  "midnightcontrols.action.zoom_out": "Giảm Zoom",
-  "midnightcontrols.action.zoom_reset": "Đặt lại Zoom",
+  "midnightcontrols.action.zoom": "Phóng",
+  "midnightcontrols.action.zoom_in": "Tăng Phóng",
+  "midnightcontrols.action.zoom_out": "Giảm Phóng",
+  "midnightcontrols.action.zoom_reset": "Đặt lại Phóng",
   "midnightcontrols.action.emi_page_left": "Trang trước",
   "midnightcontrols.action.emi_page_right": "Trang tiếp theo",
   "midnightcontrols.category.emi": "EMI",
