--- a/src/main/resources/assets/midnightcontrols/lang/vi_vn.json
+++ b/src/main/resources/assets/midnightcontrols/lang/vi_vn.json
@@ -142,9 +142,9 @@
   "midnightcontrols.menu.fast_block_placing": "Đặt khối nhanh",
   "midnightcontrols.menu.fast_block_placing.tooltip": "Trong khi bay ở chế độ sáng tạo, cho phép đặt khối nhanh tùy thuộc vào tốc độ của bạn. §cTrên một số máy chủ, điều này có thể bị coi là gian lận.",
   "midnightcontrols.menu.fly_drifting": "Trôi bay",
-  "midnightcontrols.menu.fly_drifting.tooltip": "Khi đang bay, cho phép trôi dọc/xen kẽ Vanilla.",
+  "midnightcontrols.menu.fly_drifting.tooltip": "Khi đang bay, cho phép trôi dọc/xen kẽ truyền thống.",
   "midnightcontrols.menu.fly_drifting_vertical": "Trôi theo phương thẳng đứng",
-  "midnightcontrols.menu.fly_drifting_vertical.tooltip": "Trong khi bay, cho phép trôi dọc/xen kẽ Vanilla.",
+  "midnightcontrols.menu.fly_drifting_vertical.tooltip": "Trong khi bay, cho phép trôi dọc/xen kẽ truyền thống.",
   "midnightcontrols.menu.hud_enable": "Bật HUD",
   "midnightcontrols.menu.hud_enable.tooltip": "Chuyển đổi chỉ báo nút điều khiển trên màn hình.",
   "midnightcontrols.menu.hud_side": "Phía HUD",
