--- a/src/main/resources/assets/midnightcontrols/lang/ko_kr.json
+++ b/src/main/resources/assets/midnightcontrols/lang/ko_kr.json
@@ -1,5 +1,24 @@
 {
   "midnightcontrols.midnightconfig.title": "MidnightControls 고급 설정",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.DEFAULT_LIGHT": "기본 밝게",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.DEFAULT_DARK": "기본 어둡게",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.SECOND_LIGHT": "두 번째 밝게",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.SECOND_DARK": "두 번째 어둡게",
+  "midnightcontrols.midnightconfig.enum.ControllerType.DEFAULT": "기본값값",
+  "midnightcontrols.midnightconfig.enum.ControllerType.DUALSHOCK": "듀얼쇼크",
+  "midnightcontrols.midnightconfig.enum.ControllerType.DUALSENSE": "듀얼센스",
+  "midnightcontrols.midnightconfig.enum.ControllerType.SWITCH": "Switch/Wii 컨트롤러",
+  "midnightcontrols.midnightconfig.enum.ControllerType.XBOX": "엑스박스 원/시리즈 컨트롤러",
+  "midnightcontrols.midnightconfig.enum.ControllerType.XBOX_360": "엑스박스 360 컨트롤러",
+  "midnightcontrols.midnightconfig.enum.ControllerType.STEAM_CONTROLLER": "스팀 컨트롤러",
+  "midnightcontrols.midnightconfig.enum.ControllerType.STEAM_DECK": "스팀 덱",
+  "midnightcontrols.midnightconfig.enum.ControllerType.OUYA": "OUYA 컨트롤러",
+  "midnightcontrols.midnightconfig.enum.ControllerType.NUMBERED": "숫자 컨트롤러",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.DEFAULT": "키보드/마우스",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.CONTROLLER": "컨트롤러",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.TOUCHSCREEN": "터치스크린 (미완성)",
+  "midnightcontrols.midnightconfig.enum.HudSide.LEFT": "왼쪽",
+  "midnightcontrols.midnightconfig.enum.HudSide.RIGHT": "오른쪽",
   "key.midnightcontrols.look_down": "아래쪽 보기",
   "key.midnightcontrols.look_left": "왼쪽 보기",
   "key.midnightcontrols.look_right": "오른쪽 보기",
@@ -8,6 +27,7 @@
   "midnightcontrols.action.attack": "공격",
   "midnightcontrols.action.back": "뒤로",
   "midnightcontrols.action.chat": "채팅 열기",
+  "midnightcontrols.action.debug_screen": "디버그 HUD 열기 (F3)",
   "midnightcontrols.action.drop_item": "아이템 버리기",
   "midnightcontrols.action.exit": "종료",
   "midnightcontrols.action.forward": "앞으로",
@@ -150,9 +170,9 @@
   "midnightcontrols.menu.rotation_speed.tooltip": "컨트롤러 모드에서 적용되는 카메라 회전 속도.",
   "midnightcontrols.menu.unfocused_input.tooltip": "창이 활성화된 상태가 아니여도 컨트롤러 입력 허용.",
   "midnightcontrols.menu.virtual_mouse.tooltip": "분할 화면에선 도움 되는 가상 마우스를 사용합니다.",
-  "midnightcontrols.virtual_mouse.skin.default_light": "기본 라이트",
-  "midnightcontrols.virtual_mouse.skin.default_dark": "기본 다크",
-  "midnightcontrols.virtual_mouse.skin.second_light": "두 번째 라이트",
-  "midnightcontrols.virtual_mouse.skin.second_dark": "두 번째 다크",
+  "midnightcontrols.virtual_mouse.skin.default_light": "기본 밝게",
+  "midnightcontrols.virtual_mouse.skin.default_dark": "기본 어둡게",
+  "midnightcontrols.virtual_mouse.skin.second_light": "두 번째 밝게",
+  "midnightcontrols.virtual_mouse.skin.second_dark": "두 번째 어둡게",
   "modmenu.descriptionTranslation.midnightcontrols": "컨트롤러 제어 및 전반적인 향상된 제어 기능을 추가합니다.\n안타깝게도 업데이트가 끊긴 LambdaControls의 Fork 버전입니다."
 }
