Even more touchscreen improvements
- Fixed #222
Touch-specific improvements
- Interactive items can now be used correctly
- Drop button now works
- Most Keybinds will now work correctly while in touchscreen mode
- Added Touch category to simple options screen

--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -19,6 +19,8 @@
   "midnightcontrols.midnightconfig.enum.ControlsMode.TOUCHSCREEN": "Touchscreen (WIP)",
   "midnightcontrols.midnightconfig.enum.HudSide.LEFT": "Left",
   "midnightcontrols.midnightconfig.enum.HudSide.RIGHT": "Right",
+  "midnightcontrols.midnightconfig.enum.TouchMode.CROSSHAIR": "At Crosshair",
+  "midnightcontrols.midnightconfig.enum.TouchMode.FINGER_POS": "Finger Position",
   "key.midnightcontrols.look_down": "Look down",
   "key.midnightcontrols.look_left": "Look left",
   "key.midnightcontrols.look_right": "Look right",
@@ -30,6 +32,9 @@
   "midnightcontrols.action.controls_ring": "Open Unbound Keybind Ring",
   "midnightcontrols.action.debug_screen": "Open Debug HUD (F3)",
   "midnightcontrols.action.drop_item": "Drop Item",
+  "midnightcontrols.action.drink": "Drink",
+  "midnightcontrols.action.eat": "Eat",
+  "midnightcontrols.action.equip": "Equip",
   "midnightcontrols.action.exit": "Exit Screen",
   "midnightcontrols.action.forward": "Forward",
   "midnightcontrols.action.hit": "Hit",
@@ -195,7 +200,13 @@
   "midnightcontrols.menu.title.general": "General Options",
   "midnightcontrols.menu.title.hud": "HUD Options",
   "midnightcontrols.menu.title.mappings.string": "Mappings File Editor",
+  "midnightcontrols.menu.title.touch": "Touch Options",
   "midnightcontrols.menu.title.visual": "Appearance Options",
+  "midnightcontrols.menu.touch_break_delay": "Touch Break Delay",
+  "midnightcontrols.menu.touch_speed": "Touch Speed",
+  "midnightcontrols.menu.invert_touch": "Invert Touch Direction",
+  "midnightcontrols.menu.touch_mode": "Touch Interaction Mode",
+  "midnightcontrols.menu.touch_transparency": "Touch HUD Transparency",
   "midnightcontrols.menu.unfocused_input": "Unfocused Input",
   "midnightcontrols.menu.unfocused_input.tooltip": "Allows controller input when the window is not focused.",
   "midnightcontrols.menu.virtual_mouse": "Virtual Mouse",
@@ -213,6 +224,7 @@
   "midnightcontrols.midnightconfig.category.misc": "Miscellaneous",
   "midnightcontrols.midnightconfig.category.screens": "Screens",
   "midnightcontrols.midnightconfig.category.gameplay": "Gameplay",
+  "midnightcontrols.midnightconfig.category.touch": "Touch",
   "midnightcontrols.midnightconfig.category.visual": "Visual",
   "modmenu.descriptionTranslation.midnightcontrols": "Adds controller support and enhanced controls overall.\nForked from LambdaControls, which sadly got discontinued."
 }
