Add new settings to options screen

--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -21,6 +21,8 @@
   "midnightcontrols.midnightconfig.enum.HudSide.RIGHT": "Right",
   "midnightcontrols.midnightconfig.enum.TouchMode.CROSSHAIR": "At Crosshair",
   "midnightcontrols.midnightconfig.enum.TouchMode.FINGER_POS": "Finger Position",
+  "midnightcontrols.midnightconfig.enum.CameraMode.FLAT": "Flat",
+  "midnightcontrols.midnightconfig.enum.CameraMode.ADAPTIVE": "Adaptive",
   "key.midnightcontrols.look_down": "Look down",
   "key.midnightcontrols.look_left": "Look left",
   "key.midnightcontrols.look_right": "Look right",
@@ -133,6 +135,7 @@
   "midnightcontrols.menu.analog_movement.tooltip": "When possible, enables analog movement.",
   "midnightcontrols.menu.auto_switch_mode": "Auto Switch Mode",
   "midnightcontrols.menu.auto_switch_mode.tooltip": "Whether the controls mode should be switched to Controller automatically if one is connected.",
+  "midnightcontrols.menu.camera_mode": "Camera Mode",
   "midnightcontrols.menu.controller": "Controller",
   "midnightcontrols.menu.controller2": "Second Controller",
   "midnightcontrols.menu.controller2.tooltip": "Second controller to use, which allows (for example) Joy-Cons support.",
@@ -207,6 +210,7 @@
   "midnightcontrols.menu.invert_touch": "Invert Touch Direction",
   "midnightcontrols.menu.touch_mode": "Touch Interaction Mode",
   "midnightcontrols.menu.touch_transparency": "Touch HUD Transparency",
+  "midnightcontrols.menu.touch_with_controller": "Touch in Controller mode",
   "midnightcontrols.menu.unfocused_input": "Unfocused Input",
   "midnightcontrols.menu.unfocused_input.tooltip": "Allows controller input when the window is not focused.",
   "midnightcontrols.menu.virtual_mouse": "Virtual Mouse",
