Touch-related fixes

--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -16,7 +16,7 @@
   "midnightcontrols.midnightconfig.enum.ControllerType.NUMBERED": "Numbered Controller",
   "midnightcontrols.midnightconfig.enum.ControlsMode.DEFAULT": "Keyboard/Mouse",
   "midnightcontrols.midnightconfig.enum.ControlsMode.CONTROLLER": "Controller",
-  "midnightcontrols.midnightconfig.enum.ControlsMode.TOUCHSCREEN": "Touchscreen (WIP)",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.TOUCHSCREEN": "Touchscreen (Beta)",
   "midnightcontrols.midnightconfig.enum.HudSide.LEFT": "Left",
   "midnightcontrols.midnightconfig.enum.HudSide.RIGHT": "Right",
   "midnightcontrols.midnightconfig.enum.TouchMode.CROSSHAIR": "At Crosshair",
@@ -128,7 +128,7 @@
   "midnightcontrols.controller_type.numbered": "Numbered Controller",
   "midnightcontrols.controls_mode.default": "Keyboard/Mouse",
   "midnightcontrols.controls_mode.controller": "Controller",
-  "midnightcontrols.controls_mode.touchscreen": "Touchscreen (WIP)",
+  "midnightcontrols.controls_mode.touchscreen": "Touchscreen (Beta)",
   "midnightcontrols.hud_side.left": "Left",
   "midnightcontrols.hud_side.right": "Right",
   "midnightcontrols.menu.analog_movement": "Analog Movement",
