Improve look keybinds
- Now work regardless of the controller camera mode
- Can now be found in MidnightControls category instead of Minecraft vanilla's
-

--- a/common/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/common/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -23,10 +23,11 @@
   "midnightcontrols.midnightconfig.enum.TouchMode.FINGER_POS": "Finger Position",
   "midnightcontrols.midnightconfig.enum.CameraMode.FLAT": "Flat",
   "midnightcontrols.midnightconfig.enum.CameraMode.ADAPTIVE": "Adaptive",
-  "key.midnightcontrols.look_down": "Look down",
-  "key.midnightcontrols.look_left": "Look left",
-  "key.midnightcontrols.look_right": "Look right",
-  "key.midnightcontrols.look_up": "Look up",
+  "key.categories.midnightcontrols": "MidnightControls",
+  "key.midnightcontrols.look_down": "Look Down",
+  "key.midnightcontrols.look_left": "Look Left",
+  "key.midnightcontrols.look_right": "Look Right",
+  "key.midnightcontrols.look_up": "Look Up",
   "key.midnightcontrols.ring": "Open Unbound Keybind Ring",
   "midnightcontrols.action.attack": "Attack",
   "midnightcontrols.action.back": "Back",
