--- a/common/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/common/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -130,8 +130,8 @@
   "midnightcontrols.controls_mode.default": "Keyboard/Mouse",
   "midnightcontrols.controls_mode.controller": "Controller",
   "midnightcontrols.controls_mode.touchscreen": "Touchscreen (Beta)",
-  "midnightcontrols.hud_side.left": "Left",
-  "midnightcontrols.hud_side.right": "Right",
+  "midnightcontrols.hud_side.LEFT": "Left",
+  "midnightcontrols.hud_side.RIGHT": "Right",
   "midnightcontrols.menu.analog_movement": "Analog Movement",
   "midnightcontrols.menu.analog_movement.tooltip": "When possible, enables analog movement.",
   "midnightcontrols.menu.auto_switch_mode": "Auto Switch Mode",
